feat: add cors config